# modelica-rust-gdext

./: .gitmodules  Cargo.toml  ReadMe.md
.github/composite/godot-itest/: action.yml
.github/workflows/: full-ci.yml
modelica-integration/: Cargo.toml
modelica-integration/src/: lib.rs  modelica_component.rs  modelica_node.rs
